--- a/exercise/Module3Assignment/css/styles.css
+++ b/exercise/Module3Assignment/css/styles.css
@@ -1,10 +1,54 @@
+* {
+	box-sizing: border-box;
+}
 h1 {
 	font-family: 'Lobster', cursive;
 	padding-left: auto;
 	padding-right: 10px;
 	margin-top: -5px;
+	margin-bottom: 25px;
+	position: relative;
 }
 
 .navbar-brand {
 	margin-top: -5px;
+}
+
+#home-page-title {
+	font-family: 'Anton', sans-serif;
+	font-size: 300%;
+	padding-bottom: 10px;
+}
+
+#chicken h2 {
+	font-family: 'Anton', sans-serif;
+	margin-top: 5px;
+}
+
+#beef h2 {
+	font-family: 'Anton', sans-serif;
+	margin-top: 5px;
+}
+
+#sushi h2 {
+	font-family: 'Anton', sans-serif;
+	margin-top: 5px;
+}
+
+.section {
+  /*background-color:gray;*/
+  border: 1px solid black;
+  position: relative;
+  min-height:200px;
+  margin-left:atuo;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  min-width: 300px;
+  overflow: hidden;
+  padding: 20px;
+}
+
+p {
+	font-family: 'Roboto', sans-serif;
 }
