--- a/exercise/Module3Assignment/css/styles.css
+++ b/exercise/Module3Assignment/css/styles.css
@@ -36,19 +36,21 @@ h1 {
 }
 
 .section {
-  /*background-color:gray;*/
+  background-color: #f2f2f2;
   border: 1px solid black;
-  position: relative;
+  margin-bottom: 10px;
+  padding: 20px;
+  /*position: relative;
   min-height:200px;
   margin-left:atuo;
-  margin-right: 15px;
-  margin-bottom: 10px;
+  margin-right: auto;  
   box-sizing: border-box;
   min-width: 300px;
-  overflow: hidden;
-  padding: 20px;
+  overflow: hidden;*/
+  
 }
 
 p {
 	font-family: 'Roboto', sans-serif;
 }
+
