--- a/exercise/Module3Assignment/css/styles.css
+++ b/exercise/Module3Assignment/css/styles.css
@@ -54,3 +54,12 @@ p {
 	font-family: 'Roboto', sans-serif;
 }
 
+/* FOOTER */
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+  color: #fff;
+}
